Function missing ending ")" error does not print starting line
Whenever a )
is missing, CMake parses the whole file and prints this error at the end.
CMake Error at foo.cmake:<last line of the file>:
Parse error. Function missing ending ")". End of file reached.
Call Stack (most recent call first):
[...]
This error could be a lot more helpful if the line where the (
is opened would be printed, instead of the last line of the file