cmListFileCache: When missing ending ) print starting line instead of last one

Fixes: #19301